--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
 
     kapt 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0'
 
+    implementation("io.coil-kt:coil:2.2.2")
+
 }
