--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,9 @@ dependencies {
 
     implementation("io.coil-kt:coil:2.2.2")
 
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+
+
 }
